homepage css file

--- a/homepage.css
+++ b/homepage.css
@@ -1,33 +1,44 @@
 body{
-	background-image: linear-gradient(#DBB773,white);
+		background-image: url("https://static.pexels.com/photos/486841/pexels-photo-486841.jpeg");
+		background-size: cover;
+        background-attachment: fixed;
+        background-origin: initial;
+        background-clip: initial;
+        background-color: rgb(245, 245, 245);
+        background-repeat: no-repeat;
+        background-position: center;
+        image-rendering: -webkit-optimize-contrast;
 }
 
 
 .main{
-	width: 1073px;
+	width: 900px;
 	height: 500px;
-	margin-top: 30px;
-	background-color: #5889C2;
+	margin-top: 35px;
+	background-image: linear-gradient(to bottom right, rgba(91,43,39,1),rgba(91,43,39,0));
+	background-repeat: no-repeat;
 }
 
 .header{
 	background-color: white;
-	border: 3px;
-	border-radius: 2px;
-	height: 80px;
+	border-radius: 5px;
+	height: 75px;
+	background-image: linear-gradient(to right, white,#D6C9C0);
 
 }
 
 #name{
 	color: #024BA3;
 	font-size: 50px;
-	padding-top: 5px;
+	font-family: Georgia;
+	margin-left: -10px;
 }
 
 #logo{
-	margin-top: 10px;
+	margin-top: 5px;
 	height:63px; 
 	width:135px;
+	margin-left: -13px;
 }
 
 .body
@@ -40,25 +51,38 @@ body{
 .btn{
 	height: 60px; 
 	width: 150px;
-	background-color: #DBB773;
+	background-color: #A43332;
 	color: #F0F1F3;
 	font-size: 20px;
+	-moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: default;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: none;
+    -o-transition: all 0.218s;
+    -moz-transition: all 0.218s;
+    -webkit-transition: all 0.218s;
+    transition: all 0.218s;
 }
 
 .btn2{
-	margin-left: 35px;
+	margin-left: 30px;
 }
 
 .btn1{
-	margin-left: 10px;
+	margin-left: -5px;
 }
 
 .footer{
-	background-color: #1F3856;
+	background-color: #D6C9C0;
 	position: relative;
 	top: 350px;
 	text-align: center;
 	color: #B6AFBD;
 	vertical-align: middle;
 	height: 20px;
+	color: black;
 }
